
* SOLR-8673: Make JSON Facets extendable (Tim Owen via Mikhail Khludnev)

* SOLR-14965: metrics: Adds two metrics to the SolrCloud Overseer: solr_metrics_overseer_stateUpdateQueueSize
  and solr_metrics_overseer_collectionWorkQueueSize with corresponding entries in the the Prometheus exporter's
  default/stock configuration.  (Saatchi Bhalla, Megan Carey, Andrzej Białecki, David Smiley)

Optimizations
---------------------
* SOLR-14975: Optimize CoreContainer.getAllCoreNames, getLoadedCoreNames and getCoreDescriptors. (Bruno Roustant)

Bug Fixes
---------------------
* SOLR-14946: Fix responseHeader being returned in response when omitHeader=true and EmbeddedSolrServer is used
  as the client (Munendra S N)

* SOLR-14940: ReplicationHandler memory leak through SolrCore.closeHooks with unstable ZK connection. (Anver Sotnikov, Mike Drob)

* SOLR-14969: Prevent creating multiple cores with the same name which leads to instabilities (race condition)
  (Erick Erickson, Andreas Hubold)

* SOLR-14961: Fix for deleting zookeeper nodes with same path length. Only the first zk-node was removed. (Michael Aleythe via Mike Drob)

* SOLR-14971: AtomicUpdate 'remove', 'add-distinct' operations now works on numeric, date fields in uncommitted docs (Jason Gerlowski)

* SOLR-14983: Fix response returning original score instead of reranked score due to query and filter combining.
  (Krishan Goyal, Jason Baik, Christine Poerschke)

* SOLR-14993: Unable to download zookeeper files of 1byte in size (Erick Erickson, Allen Sooredoo)

* SOLR-14851: Http2SolrClient doesn't handle keystore type correctly (Andras Salamon via janhoy)

* SOLR-15009: Correctly propogate exceptions from DirectoryFactory.exists (Mike Drob)

* SOLR-15017: Core lib directories were not being recognized unless the solrconfig included a <lib> directive.
  (Thomas Mortagne)

* SOLR-14934: Refactored duplicate "Solr Home" logic into a single place to eliminate risk of tests using divergent values