@@ -21,10 +21,13 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.io.SolrClientCache;
@@ -122,76 +125,83 @@ public abstract class TupleStream implements Closeable, Serializable, MapWriter 
     return getShards(zkHost, collection, streamContext, new ModifiableSolrParams());
   }
 
+  static List<Replica> getReplicas(String zkHost,
+                                   String collection,
+                                   StreamContext streamContext,
+                                   SolrParams requestParams)
+      throws IOException {
+    List<Replica> replicas = new LinkedList<>();
+
+    //SolrCloud Sharding
+    SolrClientCache solrClientCache = (streamContext != null ? streamContext.getSolrClientCache() : null);
+    final SolrClientCache localSolrClientCache; // tracks any locally allocated cache that needs to be closed locally
+    if (solrClientCache == null) { // streamContext was null OR streamContext.getSolrClientCache() returned null
+      solrClientCache = localSolrClientCache = new SolrClientCache();
+    } else {
+      localSolrClientCache = null;
+    }
+
+    if (zkHost == null) {
+      throw new IOException(String.format(Locale.ROOT,"invalid expression - zkHost not found for collection '%s'",collection));
+    }
+
+    CloudSolrClient cloudSolrClient = solrClientCache.getCloudSolrClient(zkHost);
+    ZkStateReader zkStateReader = cloudSolrClient.getZkStateReader();
+    ClusterState clusterState = zkStateReader.getClusterState();
+    Slice[] slices = CloudSolrStream.getSlices(collection, zkStateReader, true);
+    Set<String> liveNodes = clusterState.getLiveNodes();
+
+    RequestReplicaListTransformerGenerator requestReplicaListTransformerGenerator;
+    final ModifiableSolrParams solrParams;
+    if (streamContext != null) {
+      solrParams = new ModifiableSolrParams(streamContext.getRequestParams());
+      requestReplicaListTransformerGenerator = streamContext.getRequestReplicaListTransformerGenerator();
+    } else {
+      solrParams = new ModifiableSolrParams();
+      requestReplicaListTransformerGenerator = null;
+    }
+    if (requestReplicaListTransformerGenerator == null) {
+      requestReplicaListTransformerGenerator = new RequestReplicaListTransformerGenerator();
+    }
+    solrParams.add(requestParams);
+
+    ReplicaListTransformer replicaListTransformer = requestReplicaListTransformerGenerator.getReplicaListTransformer(solrParams);
+
+    final String coreFilter = streamContext != null && streamContext.isLocal() ? (String)streamContext.get("core") : null;
+    List<Replica> sortedReplicas = new ArrayList<>();
+    for(Slice slice : slices) {
+      slice.getReplicas().stream().filter(r -> r.isActive(liveNodes)).forEach(sortedReplicas::add);
+      replicaListTransformer.transform(sortedReplicas);
+      sortedReplicas.stream().filter(r -> coreFilter == null || coreFilter.equals(r.core)).findFirst().ifPresent(replicas::add);
+      sortedReplicas.clear();
+    }
+
+    if (localSolrClientCache != null) {
+      localSolrClientCache.close();
+    }
+
+    return replicas;
+  }
+
   @SuppressWarnings({"unchecked"})
   public static List<String> getShards(String zkHost,
                                        String collection,
                                        StreamContext streamContext,
                                        SolrParams requestParams)
       throws IOException {
-    Map<String, List<String>> shardsMap = null;
-    List<String> shards = new ArrayList<>();
 
-    if(streamContext != null) {
-      shardsMap = (Map<String, List<String>>)streamContext.get("shards");
-    }
-
+    List<String> shards;
+    Map<String, List<String>> shardsMap = streamContext != null ? (Map<String, List<String>>)streamContext.get("shards") : null;
     if(shardsMap != null) {
       //Manual Sharding
       shards = shardsMap.get(collection);
-    } else {
-      //SolrCloud Sharding
-      SolrClientCache solrClientCache = (streamContext != null ? streamContext.getSolrClientCache() : null);
-      final SolrClientCache localSolrClientCache; // tracks any locally allocated cache that needs to be closed locally
-      if (solrClientCache == null) { // streamContext was null OR streamContext.getSolrClientCache() returned null
-        solrClientCache = localSolrClientCache = new SolrClientCache();
-      } else {
-        localSolrClientCache = null;
-      }
-      CloudSolrClient cloudSolrClient = solrClientCache.getCloudSolrClient(zkHost);
-      ZkStateReader zkStateReader = cloudSolrClient.getZkStateReader();
-      ClusterState clusterState = zkStateReader.getClusterState();
-      Slice[] slices = CloudSolrStream.getSlices(collection, zkStateReader, true);
-      Set<String> liveNodes = clusterState.getLiveNodes();
-
-
-      RequestReplicaListTransformerGenerator requestReplicaListTransformerGenerator;
-      final ModifiableSolrParams solrParams;
-      if (streamContext != null) {
-        solrParams = new ModifiableSolrParams(streamContext.getRequestParams());
-        requestReplicaListTransformerGenerator = streamContext.getRequestReplicaListTransformerGenerator();
-      } else {
-        solrParams = new ModifiableSolrParams();
-        requestReplicaListTransformerGenerator = null;
-      }
-      if (requestReplicaListTransformerGenerator == null) {
-        requestReplicaListTransformerGenerator = new RequestReplicaListTransformerGenerator();
-      }
-      solrParams.add(requestParams);
-
-      ReplicaListTransformer replicaListTransformer = requestReplicaListTransformerGenerator.getReplicaListTransformer(solrParams);
-
-      for(Slice slice : slices) {
-        List<Replica> sortedReplicas = new ArrayList<>();
-        for(Replica replica : slice.getReplicas()) {
-          if(replica.getState() == Replica.State.ACTIVE && liveNodes.contains(replica.getNodeName())) {
-            sortedReplicas.add(replica);
-          }
-        }
-
-        replicaListTransformer.transform(sortedReplicas);
-        if (sortedReplicas.size() > 0) {
-          shards.add(sortedReplicas.get(0).getCoreUrl());
-        }
-      }
-      if (localSolrClientCache != null) {
-        localSolrClientCache.close();
-      }
-    }
-    if (streamContext != null) {
-      Object core = streamContext.get("core");
-      if (streamContext.isLocal() && core != null) {
+      final Object core = streamContext.isLocal() ? streamContext.get("core") : null;
+      if (core != null) {
         shards.removeIf(shardUrl -> !shardUrl.contains((CharSequence) core));
       }
+    } else {
+      shards = getReplicas(zkHost, collection, streamContext, requestParams).stream()
+          .map(Replica::getCoreUrl).collect(Collectors.toList());
     }
 
     return shards;
